// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders content IconCard 1`] = `
<View
  style={
    Object {
      "alignContent": "center",
      "backgroundColor": "#0092dbff",
      "borderRadius": 8,
      "display": "flex",
      "flexDirection": "column",
      "height": 200,
      "justifyContent": "center",
      "marginBottom": 20,
      "marginLeft": 20,
      "marginRight": 20,
      "marginTop": 20,
      "paddingBottom": 8,
      "paddingLeft": 8,
      "paddingRight": 8,
      "paddingTop": 8,
      "width": 200,
    }
  }
>
  <Image
    style={
      Object {
        "alignSelf": "center",
        "height": 120,
        "marginTop": 16,
        "width": 120,
      }
    }
  />
  <View
    style={
      Object {
        "marginLeft": 16,
        "marginRight": 16,
        "marginTop": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "white",
          "fontSize": 26,
          "textAlign": "center",
        }
      }
    >
      title
    </Text>
  </View>
</View>
`;

exports[`renders content and image IconCard 1`] = `
<View
  style={
    Object {
      "alignContent": "center",
      "backgroundColor": "#0092dbff",
      "borderRadius": 8,
      "display": "flex",
      "flexDirection": "column",
      "height": 200,
      "justifyContent": "center",
      "marginBottom": 20,
      "marginLeft": 20,
      "marginRight": 20,
      "marginTop": 20,
      "paddingBottom": 8,
      "paddingLeft": 8,
      "paddingRight": 8,
      "paddingTop": 8,
      "width": 200,
    }
  }
>
  <Image
    source={
      Object {
        "testUri": "../../../__tests__/components/test.jpg",
      }
    }
    style={
      Object {
        "alignSelf": "center",
        "height": 120,
        "marginTop": 16,
        "width": 120,
      }
    }
  />
  <View
    style={
      Object {
        "marginLeft": 16,
        "marginRight": 16,
        "marginTop": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "white",
          "fontSize": 26,
          "textAlign": "center",
        }
      }
    >
      title
    </Text>
  </View>
</View>
`;

exports[`renders simple IconCard 1`] = `
<View
  style={
    Object {
      "alignContent": "center",
      "backgroundColor": "#0092dbff",
      "borderRadius": 8,
      "display": "flex",
      "flexDirection": "column",
      "height": 200,
      "justifyContent": "center",
      "marginBottom": 20,
      "marginLeft": 20,
      "marginRight": 20,
      "marginTop": 20,
      "paddingBottom": 8,
      "paddingLeft": 8,
      "paddingRight": 8,
      "paddingTop": 8,
      "width": 200,
    }
  }
>
  <Image
    style={
      Object {
        "alignSelf": "center",
        "height": 120,
        "marginTop": 16,
        "width": 120,
      }
    }
  />
  <View
    style={
      Object {
        "marginLeft": 16,
        "marginRight": 16,
        "marginTop": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "white",
          "fontSize": 26,
          "textAlign": "center",
        }
      }
    />
  </View>
</View>
`;
